[package]
name = "parachute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.9"
serde = "1.0.132"
toml = "0.5.8"
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0.52"
dotenv = "0.15.0"
chrono = "*"
reqwest = "0.11.8"
csv = "1.1.6"
